--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,12 @@
-# ======================
-# Python / Django
-# ======================
+# Python
 backend/venv/
-venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.sqlite3
-db.sqlite3
-media/
+backend/__pycache__/
+backend/*.pyc
+backend/.env
+backend/db.sqlite3
 
-# Environment variables
-.env
-
-# ======================
-# Flutter / Dart
-# ======================
-build/
-.dart_tool/
-.packages
-.flutter-plugins
-.flutter-plugins-dependencies
-
-# ======================
-# VS Code / IDE
-# ======================
-.vscode/
-.idea/
-
-# ======================
-# OS Files
-# ======================
-.DS_Store
-Thumbs.db
+# Flutter
+frontend/.dart_tool/
+frontend/build/
+frontend/.flutter-plugins
+frontend/.flutter-plugins-dependencies
