--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ backend/__pycache__/
 backend/*.pyc
 backend/.env
 backend/db.sqlite3
+backend/firebase-credentials.json
+
 
 # Flutter
 frontend/.dart_tool/
