--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /app
 COPY . .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "config.asgi:application"]
+RUN python manage.py collectstatic --noinput
+CMD ["daphne", "-b", "0.0.0.0", "-p", "8080", "config.asgi:application"]
