--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,5 +3,4 @@ WORKDIR /app
 COPY . .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-RUN python manage.py collectstatic --noinput
-CMD ["daphne", "-b", "0.0.0.0", "-p", "8080", "config.asgi:application"]
+CMD daphne -b 0.0.0.0 -p $PORT config.asgi:application
