--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ COPY . .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 RUN python manage.py collectstatic --noinput
-CMD python manage.py migrate && gunicorn config.wsgi:application --bind 0.0.0.0:$PORT --workers 2
+CMD python manage.py migrate && daphne -b 0.0.0.0 -p $PORT config.asgi:application
